fix rmi ex5